# inspect

./: Makefile  Makefile.am  Makefile.in  cc.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  endian_check  endian_check.c  libtool
Debug/: makefile  sources.mk  subdir.mk
Debug/src/: subdir.mk
Debug/src/ezxml/: subdir.mk
Debug/src/match_modules/: subdir.mk
Debug/src/osdep/: subdir.mk
Debug/src/osdep/radiotap/: subdir.mk
Debug/src/output_modules/: subdir.mk
Debug/src/parser_modules/: subdir.mk
Debug/src/rtx_modules/: subdir.mk
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/ezxml/: test.c  test.xml
src/: .compile.sh.swp  Makefile  Makefile.am  Makefile.in  aircrack_utils.c  alloc.c  alloc.h  compile.sh  config.h  config.status  configure  configure.ac  convert.c  convert.h  echo.h  format.h  h80211_struct.h  inspect  inspect.c  log.c  log.h  match.c  match.h  module.c  module.h  modules.c  modules.h  output.c  output.h  parser.c  parser.h  resource.c  resource.h  rtx.c  rtx.h  s  string_util.c  strings.c  strings.h  tags  (+7 more)
src.bak/: Makefile  Makefile.am  Makefile.in  alloc.c  alloc.h  convert.c  convert.h  h80211_struct.h  inspect  inspect.c  log.c  match.h  module.c  output.h  parser.c  perform.h  resource.c  rtx.h  string_util.h  test.c  test.sh  thread_wait.h  typedef.h  u  version.h
src.bak/.deps/: inspect-alloc.Po  inspect-log.Po  inspect-match.Po  inspect-output.Po  inspect-parser.Po
src.bak/bash_completion/: inspect
src.bak/cmdutil/: Makefile  Makefile.am  iw.h
src.bak/cmdutil/bash_completion/: cmdutil
src.bak/ezxml/: Makefile  Makefile.am  Makefile.in
src.bak/ezxml/.deps/: libezxml_la-ezxml.Plo
src.bak/match_modules/: Makefile.am  Makefile.in  wifi_match.c
src.bak/osdep/: Makefile.in  channel.h  linux.c  osdep.h
src.bak/output_modules/: Makefile.am  Makefile.in  error_output.c  wifi_xml_output.c
src.bak/parser_modules/: Makefile  Makefile.in  xml_parser.c
src.bak/pcap/: offline_shooter.c
src.bak/rtx_modules/: Makefile  wifi_rtx.c
src/.deps/: inspect-inspect.Po
src/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
src/bash_completion/: inspect
src/cmdutil/: Makefile.in  cmdutil  cmdutil.c  cmdutil.h  iw.c
src/ezxml/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libezxml.la  libezxml_la-ezxml.lo  libtool
src/ezxml/.libs/: libezxml.la  libezxml.lai  libezxml.so.1  libezxml.so.1.0.0
src/ezxml/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/log/: log.h
src/match_modules/: Makefile  Makefile.am  Makefile.in  h80211_defs.h  h80211_match.c  h80211_struct.h  h80211_types.h  wifi_match.c
src/modules/: inspect.db3  module_sqlite3.c  module_sqlite3.h
src/osdep/: Makefile  Makefile.am  Makefile.in  linux.c  osdep.c  osdep.h
src/output_modules/: Makefile  Makefile.am  Makefile.in  config.h  configure.ac  error_output.c  wifi_xml_output.c  xml_output.c
src/output_modules/.deps/: libxmloutput_la-xml_output.Plo
src/parser_modules/: Makefile  Makefile.am  Makefile.in  xml_parser.c
src/pcap/: beacon.pcap  offline_shooter
src/rtx_modules/: Makefile  Makefile.am  Makefile.in  wifi_rtx.c
